Update TestJaxrsBase.java